syntax = "proto3";
option go_package = "github.com/gs-samples/grpc/helloworld";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  map<string, string> attrs = 2; // 商品属性，键值对
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}